--- a/www/package.json
+++ b/www/package.json
@@ -24,5 +24,8 @@
     "babel-polyfill": "^6.26.0",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.1"
+  },
+  "dependencies": {
+    "js-cookie": "^2.2.1"
   }
 }
